source/common/main/default/objects/Venue__c/Venue__c.object-meta.xml
<CustomObject>
    <label>Venue</label>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>