source/common/main/default/objects/Venue__c/fields/Airport_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Airport_Abbreviation__c</fullName>
    <label>Airport Abbreviation</label>
    <length>3</length>
    <type>Text</type>
</CustomField>