source/common/main/default/objects/Venue__c/fields/Airport_City__c.field-meta.xml
<CustomField>
    <fullName>Airport_City__c</fullName>
    <label>Airport City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>