source/common/main/default/objects/Venue__c/fields/Airport_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Airport_Geolocation__c</fullName>
    <label>Airport Geolocation</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>