source/common/main/default/objects/Venue__c/fields/Airport_Name__c.field-meta.xml
<CustomField>
    <fullName>Airport_Name__c</fullName>
    <label>Airport Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>