source/common/main/default/objects/Venue__c/fields/Airport_Postal_Code_Zip__c.field-meta.xml
<CustomField>
    <fullName>Airport_Postal_Code_Zip__c</fullName>
    <label>Airport Postal Code/Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>