source/common/main/default/objects/Venue__c/fields/Airport_State__c.field-meta.xml
<CustomField>
    <fullName>Airport_State__c</fullName>
    <label>Airport State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>